# SecureStash

./: README.md
project/: UF2.uf2
project/UF2/: commands.txt
project/src/embassy/: Cargo.toml
project/src/embassy/src/: main.rs
