[package]
name = "embassy_project"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m-rt = "0.7.3"
cortex-m = "0.7.7"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = "0.3.0"
embassy-rp = { version = "0.1.0", features = ["time-driver", "critical-section-impl"] }
defmt = "0.3"
log = "0.4.21"
embassy-usb-logger = "0.1.0"
embassy-sync = "0.5.0"
embassy-futures = "0.1.1"
heapless = "0.7.9" # Add heapless crate
rp2040-hal = "0.10.0"
ag-lcd = { version = "0.2.0", features = ["i2c"] }
port-expander = "0.3.0"
mfrc522 = "0.7.0"